save exoplayer state on device rotation

--- a/app/src/main/res/layout/fragment_recipe_step_detail.xml
+++ b/app/src/main/res/layout/fragment_recipe_step_detail.xml
@@ -1,26 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:keepScreenOn="true"
+    android:orientation="vertical"
     tools:context=".RecipeStepDetailFragment">
 
     <com.google.android.exoplayer2.ui.PlayerView
         android:id="@+id/recipe_step_video"
         android:layout_width="match_parent"
-        android:layout_height="250dp"/>
+        android:layout_height="250dp"
+        app:show_buffering="when_playing" />
 
     <TextView
         android:id="@+id/recipe_step_desc"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:textColor="@android:color/black"
-        android:textAppearance="?android:textAppearanceMedium"
         android:layout_margin="4dp"
-        android:gravity="center"
         android:layout_weight="1"
+        android:gravity="center"
+        android:textAppearance="?android:textAppearanceMedium"
+        android:textColor="@android:color/black"
         tools:text="Whisk the graham cracker crumbs, 50 grams (1/4 cup) of sugar, and 1/2 teaspoon of salt together in a medium bowl. Pour the melted butter and 1 teaspoon of vanilla into the dry ingredients and stir together until evenly mixed." />
 
     <LinearLayout
@@ -34,14 +36,14 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Prev"/>
+            android:text="Prev" />
 
         <Button
             android:id="@+id/next_button"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Next"/>
+            android:text="Next" />
 
 
     </LinearLayout>
