--- a/app/src/main/res/layout/yummly_widget.xml
+++ b/app/src/main/res/layout/yummly_widget.xml
@@ -1,21 +1,20 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="#09C"
-    android:padding="@dimen/widget_margin">
+    android:layout_height="match_parent">
+
+
+    <ListView
+        android:id="@+id/appwidget_list_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 
     <TextView
-        android:id="@+id/appwidget_text"
+        android:id="@+id/appwidget_empty_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
-        android:layout_margin="8dp"
-        android:background="#09C"
-        android:contentDescription="@string/appwidget_text"
-        android:text="@string/appwidget_text"
-        android:textColor="#ffffff"
-        android:textSize="24sp"
-        android:textStyle="bold|italic" />
+        android:layout_gravity="center"
+        android:textAppearance="?android:textAppearanceMedium"
+        android:padding="8dp"
+        android:text="@string/no_ingredients_found" />
 
-</RelativeLayout>
+</FrameLayout>
