--- a/app/src/main/res/layout/layout_recipe_step_list_item.xml
+++ b/app/src/main/res/layout/layout_recipe_step_list_item.xml
@@ -12,7 +12,8 @@
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:background="@drawable/background_selector">
 
         <TextView
             android:id="@+id/recipe_step_short_desc"
