--- a/app/src/main/res/layout/layout_recipe_card_list_item.xml
+++ b/app/src/main/res/layout/layout_recipe_card_list_item.xml
@@ -25,8 +25,20 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/recipe_card_image"
+            app:layout_constraintVertical_bias="0.0"
             tools:text="Nutella Pie" />
+
+        <ImageView
+            android:id="@+id/recipe_card_image"
+            android:layout_width="0dp"
+            android:layout_height="200dp"
+            android:scaleType="centerCrop"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:srcCompat="@tools:sample/avatars"
+            android:contentDescription="@string/no_description_available" />
 
     </android.support.constraint.ConstraintLayout>
 
