--- a/app/src/main/res/layout-land/fragment_recipe_step_detail.xml
+++ b/app/src/main/res/layout-land/fragment_recipe_step_detail.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:keepScreenOn="true"
-    android:orientation="vertical"
     tools:context=".RecipeStepDetailFragment">
 
     <com.google.android.exoplayer2.ui.PlayerView
@@ -14,4 +13,13 @@
         android:layout_height="match_parent"
         app:show_buffering="when_playing" />
 
-</LinearLayout>
+    <ImageView
+        android:id="@+id/empty_image_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:contentDescription="@string/no_description_available"
+        android:scaleType="centerCrop"
+        android:src="@drawable/default_image"
+        android:visibility="gone" />
+
+</FrameLayout>
