--- a/app/src/main/res/layout-sw600dp/fragment_recipe_step_detail.xml
+++ b/app/src/main/res/layout-sw600dp/fragment_recipe_step_detail.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -8,13 +8,42 @@
     android:orientation="vertical"
     tools:context=".RecipeStepDetailFragment">
 
-    <com.google.android.exoplayer2.ui.PlayerView
-        android:id="@+id/recipe_step_video"
+    <TextView
+        android:id="@+id/recipe_step_count"
         android:layout_width="match_parent"
-        android:layout_height="500dp"
-        android:layout_centerInParent="true"
-        app:show_buffering="when_playing"
-        android:layout_gravity="center"/>
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:textAppearance="?android:textAppearanceMedium"
+        android:textColor="@android:color/black"
+        android:layout_marginTop="32dp"
+        tools:text="Step 5 of 12"/>
+
+    <FrameLayout
+        android:id="@+id/player_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp">
+
+        <com.google.android.exoplayer2.ui.PlayerView
+            android:id="@+id/recipe_step_video"
+            android:layout_width="match_parent"
+            android:layout_height="500dp"
+            app:show_buffering="when_playing"
+            android:layout_marginTop="16dp"
+            android:layout_marginBottom="16dp"/>
+
+        <ImageView
+            android:id="@+id/empty_image_view"
+            android:layout_width="match_parent"
+            android:layout_height="250dp"
+            android:contentDescription="@string/no_description_available"
+            android:scaleType="centerCrop"
+            android:visibility="gone"
+            android:src="@drawable/default_image"
+            android:layout_marginTop="16dp"
+            android:layout_marginBottom="16dp"/>
+
+    </FrameLayout>
 
     <TextView
         android:id="@+id/recipe_step_desc"
@@ -22,9 +51,8 @@
         android:layout_height="wrap_content"
         android:layout_margin="4dp"
         android:gravity="center"
-        android:layout_below="@id/recipe_step_video"
         android:textAppearance="?android:textAppearanceMedium"
         android:textColor="@android:color/black"
         tools:text="Whisk the graham cracker crumbs, 50 grams (1/4 cup) of sugar, and 1/2 teaspoon of salt together in a medium bowl. Pour the melted butter and 1 teaspoon of vanilla into the dry ingredients and stir together until evenly mixed." />
 
-</RelativeLayout>
+</LinearLayout>
