--- a/app/src/main/res/layout/fragment_recipe_step_detail.xml
+++ b/app/src/main/res/layout/fragment_recipe_step_detail.xml
@@ -8,9 +8,21 @@
     android:orientation="vertical"
     tools:context=".RecipeStepDetailFragment">
 
+    <TextView
+        android:id="@+id/recipe_step_count"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:textAppearance="?android:textAppearanceMedium"
+        android:textColor="@android:color/black"
+        android:layout_marginTop="16dp"
+        tools:text="Step 5 of 12"/>
+
+
     <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp">
 
         <com.google.android.exoplayer2.ui.PlayerView
             android:id="@+id/recipe_step_video"
@@ -44,7 +56,7 @@
         android:id="@+id/button_container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="8dp">
+        android:layout_margin="16dp">
 
         <Button
             android:id="@+id/prev_button"
