--- a/app/src/main/res/xml/yummly_widget_info.xml
+++ b/app/src/main/res/xml/yummly_widget_info.xml
@@ -2,9 +2,9 @@
 <appwidget-provider xmlns:android="http://schemas.android.com/apk/res/android"
     android:initialKeyguardLayout="@layout/yummly_widget"
     android:initialLayout="@layout/yummly_widget"
-    android:minWidth="110dp"
-    android:minHeight="110dp"
-    android:previewImage="@drawable/example_appwidget_preview"
+    android:minWidth="150dp"
+    android:minHeight="150dp"
+    android:previewImage="@drawable/ic_recipe"
     android:resizeMode="horizontal|vertical"
     android:updatePeriodMillis="86400000"
-    android:widgetCategory="home_screen"></appwidget-provider>
+    android:widgetCategory="home_screen" />
