--- a/app/src/main/res/layout/yummly_widget.xml
+++ b/app/src/main/res/layout/yummly_widget.xml
@@ -1,8 +1,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/white"
-    xmlns:tools="http://schemas.android.com/tools">
+    android:background="@android:color/white">
 
     <TextView
         android:id="@+id/recipe_name"
@@ -12,7 +11,7 @@
         android:textColor="@android:color/white"
         android:padding="16dp"
         android:background="@color/colorPrimary"
-        tools:text="Nutella Pie"/>
+        android:text="@string/recipe_ingredients" />
 
 
     <ListView
