--- a/app/src/main/res/drawable/background_circular.xml
+++ b/app/src/main/res/drawable/background_circular.xml
@@ -2,7 +2,7 @@
 <shape
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="oval">
-    <solid android:color="#A98274" />
+    <solid android:color="@color/colorPrimaryLight" />
     <size android:height="30dp"
         android:width="30dp"/>
 </shape>
