--- a/app/src/main/res/layout/layout_recipe_step_list_item.xml
+++ b/app/src/main/res/layout/layout_recipe_step_list_item.xml
@@ -38,7 +38,7 @@
         android:gravity="center"
         android:background="@drawable/background_circular"
         android:textAppearance="?android:textAppearanceMedium"
-        android:textColor="@android:color/black"
+        android:textColor="@android:color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
