--- a/app/src/main/res/layout/activity_recipe_step_list.xml
+++ b/app/src/main/res/layout/activity_recipe_step_list.xml
@@ -4,6 +4,6 @@
     android:id="@+id/recipe_step_list_container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".RecipeStepListActivity">
+    tools:context=".ui.RecipeStepListActivity">
 
 </FrameLayout>
