--- a/app/src/main/res/layout-land/fragment_recipe_step_detail.xml
+++ b/app/src/main/res/layout-land/fragment_recipe_step_detail.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:keepScreenOn="true"
-    tools:context=".RecipeStepDetailFragment">
+    tools:context=".ui.RecipeStepDetailFragment">
 
     <com.google.android.exoplayer2.ui.PlayerView
         android:id="@+id/recipe_step_video"
