--- a/app/src/main/res/layout/layout_recipe_card_list_item.xml
+++ b/app/src/main/res/layout/layout_recipe_card_list_item.xml
@@ -5,8 +5,8 @@
     android:id="@+id/recipe_card"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    app:cardCornerRadius="4dp"
-    app:cardElevation="4dp"
+    app:cardCornerRadius="@dimen/dimen_4dp"
+    app:cardElevation="@dimen/dimen_4dp"
     app:cardPreventCornerOverlap="true"
     app:cardUseCompatPadding="true">
 
@@ -18,10 +18,10 @@
             android:id="@+id/recipe_name"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="8dp"
-            android:layout_marginRight="8dp"
+            android:layout_marginEnd="@dimen/dimen_8dp"
+            android:layout_marginRight="@dimen/dimen_8dp"
             android:gravity="center"
-            android:padding="8dp"
+            android:padding="@dimen/dimen_8dp"
             android:textAppearance="?android:textAppearanceMedium"
             android:textColor="@android:color/black"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -35,7 +35,7 @@
         <ImageView
             android:id="@+id/recipe_card_image"
             android:layout_width="0dp"
-            android:layout_height="200dp"
+            android:layout_height="@dimen/dimen_200dp"
             android:contentDescription="@string/no_description_available"
             android:scaleType="centerCrop"
             app:layout_constraintEnd_toEndOf="parent"
@@ -47,10 +47,10 @@
             android:id="@+id/recipe_servings"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginRight="8dp"
-            android:layout_marginBottom="8dp"
+            android:layout_marginTop="@dimen/dimen_8dp"
+            android:layout_marginEnd="@dimen/dimen_8dp"
+            android:layout_marginRight="@dimen/dimen_8dp"
+            android:layout_marginBottom="@dimen/dimen_8dp"
             android:text="@string/recipe_servings"
             app:layout_constraintBottom_toBottomOf="@+id/recipe_name"
             app:layout_constraintEnd_toEndOf="parent"
