--- a/app/src/main/res/layout-sw600dp/fragment_recipe_step_detail.xml
+++ b/app/src/main/res/layout-sw600dp/fragment_recipe_step_detail.xml
@@ -12,36 +12,36 @@
         android:id="@+id/recipe_step_count"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/dimen_32dp"
         android:gravity="center"
         android:textAppearance="?android:textAppearanceMedium"
         android:textColor="@android:color/black"
-        android:layout_marginTop="32dp"
-        tools:text="Step 5 of 12"/>
+        tools:text="Step 5 of 12" />
 
     <FrameLayout
         android:id="@+id/player_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp">
+        android:layout_marginTop="@dimen/dimen_16dp">
 
         <com.google.android.exoplayer2.ui.PlayerView
             android:id="@+id/recipe_step_video"
             android:layout_width="match_parent"
-            android:layout_height="500dp"
-            app:show_buffering="when_playing"
-            android:layout_marginTop="16dp"
-            android:layout_marginBottom="16dp"/>
+            android:layout_height="@dimen/dimen_500dp"
+            android:layout_marginTop="@dimen/dimen_16dp"
+            android:layout_marginBottom="@dimen/dimen_16dp"
+            app:show_buffering="when_playing" />
 
         <ImageView
             android:id="@+id/empty_image_view"
             android:layout_width="match_parent"
-            android:layout_height="500dp"
+            android:layout_height="@dimen/dimen_500dp"
+            android:layout_marginTop="@dimen/dimen_16dp"
+            android:layout_marginBottom="@dimen/dimen_16dp"
             android:contentDescription="@string/no_description_available"
             android:scaleType="centerCrop"
-            android:visibility="gone"
             android:src="@drawable/default_image"
-            android:layout_marginTop="16dp"
-            android:layout_marginBottom="16dp"/>
+            android:visibility="gone" />
 
     </FrameLayout>
 
@@ -49,7 +49,7 @@
         android:id="@+id/recipe_step_desc"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="4dp"
+        android:layout_margin="@dimen/dimen_4dp"
         android:gravity="center"
         android:textAppearance="?android:textAppearanceMedium"
         android:textColor="@android:color/black"
